# my_ai_journey

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  _quarto.yml  devenv.nix  devenv.yaml  index.md  pyproject.toml
.github/: dependabot.yaml  mergify.yml  renovate.json
.github/actions/uv/: action.yml
.github/workflows/: autofix.yaml  ci.yaml  ci_tools.yaml  code_analysis.yml  deploy.yaml  folder_tree.yml  test.yaml  trunk_upgrade.yml
.trunk/: trunk.yaml
.trunk/configs/: .taplo.toml  .yamlfmt.yaml  .yamllint.yaml  ruff.toml
deep-learning/: autoencoder.ipynb  inception-network.ipynb  word2vec.ipynb
deep-learning/inception-network/: inception-network.ipynb  pyproject.toml
fine-tuning/: llama3-fine-tuning-as-napoleon-bonaparte.ipynb  phi-2-fine-tuning-as-napoleon-bonaparte.ipynb
hooks/: pre-commit
machine-learning/: iris-classification-from-scratch.ipynb  k-means.ipynb  logistic-regression-from-scratch.ipynb  logistic-regression-with-k-fold.ipynb  logistic-regression-with-least-squares-technique.ipynb  logistic_regression_with_least_squares_technique.ipynb  naive-bayes-with-normal-distribution.ipynb
notebooks/deep-learning/: autoencoder.ipynb  inception-network.ipynb  word2vec.ipynb
notebooks/deep-learning/autoencoder/: notebook.ipynb  pyproject.toml
notebooks/deep-learning/inception-network/: pyproject.toml
notebooks/deep-learning/word2vec/: notebook.ipynb  pyproject.toml
notebooks/fine-tuning/: llama3-fine-tuning-as-napoleon-bonaparte.ipynb  phi-2-fine-tuning-as-napoleon-bonaparte.ipynb
notebooks/fine-tuning/llama3-fine-tuning-as-napoleon-bonaparte/: pyproject.toml
notebooks/fine-tuning/phi-2-fine-tuning-as-napoleon-bonaparte/: notebook.ipynb  pyproject.toml
notebooks/machine-learning/: iris-classification-from-scratch.ipynb  k-means.ipynb  logistic-regression-from-scratch.ipynb  logistic-regression-with-k-fold.ipynb  logistic-regression-with-least-squares-technique.ipynb  naive-bayes-with-normal-distribution.ipynb
notebooks/machine-learning/iris-classification-from-scratch/: notebook.ipynb  pyproject.toml
notebooks/machine-learning/k-means/: notebook.ipynb  pyproject.toml
notebooks/machine-learning/logistic-regression-from-scratch/: notebook.ipynb  pyproject.toml
notebooks/machine-learning/logistic-regression-with-k-fold/: notebook.ipynb  pyproject.toml
notebooks/pre-processing/: text-processing.ipynb
notebooks/pre-processing/text-processing/: pyproject.toml
notebooks/rag/: try-docling.ipynb
pre-processing/: text-processing.ipynb
rag/: try-docling.ipynb
website/: index.md
(+4 files in other folders)
