[project]
name = "my-ai-journey"
version = "0.1.0"
description = "My journey with AI"
readme = "README.md"
requires-python = ">=3.14.0, <3.15"
dependencies = [
    "bitsandbytes>=0.48.1",
    "docling>=2.58.0",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "notebook>=7.4.7",
    "opencv-python>=4.12.0.88",
    "pandas-stubs>=2.3.2.250926",
    "peft>=0.17.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "wandb>=0.22.2",
]

[dependency-groups]
dev = ["ruff>=0.14.1", "ty>=0.0.1a23"]
