[project]
  dependencies = [
    "bitsandbytes>=0.49.1",
    "docling>=2.68.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "kagglehub>=0.4.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "notebook>=7.5.2",
    "opencv-python>=4.12.0.88",
    "pandas-stubs>=2.3.3.260113",
    "peft>=0.18.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "wandb>=0.23.1",
  ]
  description = "My journey with AI"
  name = "my-ai-journey"
  readme = "README.md"
  requires-python = ">=3.13,<3.14"
  version = "0.1.0"

[dependency-groups]
  dev = ["nb-clean>=4.0.1", "ruff>=0.14.11", "ty>=0.0.11"]
