[project]
name = "inception-network"
version = "0.1.0"
description = "Inception Network"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "kagglehub>=0.3.12",
    "keras>=3.9.2",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "ty>=0.0.1a2",
]
